Fixed Overflow Issue

--- a/src/Components/Display/Modal.css
+++ b/src/Components/Display/Modal.css
@@ -21,6 +21,8 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
+    overflow-wrap: break-word;
+    padding-right : 10px;
   }
   
   .display-block {
