--- a/src/Components/Display/Note.css
+++ b/src/Components/Display/Note.css
@@ -9,6 +9,8 @@ section.container {
     border-radius : 10%;
     min-height: 200px;
     padding : 15px;
+    overflow: hidden;
+    overflow-wrap: break-word;
 }
 
 
